# websocketsDemo

./: .gitignore  pyproject.toml
.github/workflows/: build_and_test.yml  deploy_to_prod.yml  release.yml  release_to_dev.yml  revert.yml
cloudformation/: template.yml
src/lambda/: default.py  disconnect.py  send_message.py
tests/: test_initial.py
