[tool.poetry]
name = "websocketsdemo"
version = "0.1.0"
description = "Testing exercise to test rest API with websockets"
authors = ["Alfonso Lluch <amlluch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-typing = "^2.17.0"
boto3 = "^1.26.141"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
